# classic-mceliece-rs

./: Cargo.toml  README.md  build.rs  run-tests.sh
.github/workflows/: rust.yml
src/: classic_mceliece.rs  control_bits.rs  field_element.rs  field_ordering.rs  generator.rs  hash.rs  lib.rs  monic_polynomial.rs  public_key.rs  secret_key.rs
src/controlbits/: controlbits.c  controlbits.h
tests/: generate-json-kats.nu  kats-patch.json  key_exchange.rs
