[package]
name = "classic-mceliece"
version = "0.1.0"
authors = ["nixberg <k.nixberg@gmail.com>"]
edition = "2018"

build = "build.rs"
links = "controlbits"

[dependencies]
digest = "0.9"
djbsort = { git = "https://github.com/nixberg/djbsort-rs", version = "0" }
libc = "0.2"
rand = "0.8"
sha3 = "0.9"
subtle = "2"

[dev-dependencies]
hex = "0"
hex-literal = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
cc = "1"